--- a/AppResto/Site.Master
+++ b/AppResto/Site.Master
@@ -16,7 +16,7 @@
         <div>
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="/">AppResto</a>
+                    <a class="navbar-brand" href="Inicio.aspx">AppResto</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsupportedcontent" aria-controls="navbarsupportedcontent" aria-expanded="false" aria-label="toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
